fixed alignment with header and body items for both views

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ table {
 
 
 #page {
-	padding: 10%;
+	padding: 5%;
 }
 
 #bkg img {
@@ -65,7 +65,6 @@ table {
   min-height: 50%;
   opacity: 0.5;
 }
-
 
 /* based on 18px = 1em */
 
@@ -92,14 +91,14 @@ h1 small {
 	/*background-color: red;*/
 	width: auto;
 	height: auto;
-	padding: 2.197em;
+	padding: 1em;
 }
 
 h3 {
 	position: auto;
 	font-size: 1.563em; /* 28.125px */
 	font-family: Verdana, Geneva, sans-serif;
-	padding: 0.8em;
+	padding: 1em;
 }
 
 p {
@@ -135,14 +134,13 @@ p {
   padding: 0.8em;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 30em) {  /*480px*/ 
 
 h1 {
 	font-size: 4.292em; /* 68.665px */
 	font-family: 'Pinyon Script', cursive;
 	top: 0.262em;
 }
-
 
 h1 small{
 	font-size: 0.64em; /*16px */
@@ -169,7 +167,7 @@ p {
 #main-navbar {
 	overflow: hidden;
 	background-color: #625370;
-	top: 5em;
+	height: 2.7777em; /*50px*/
 }
 
 #main-navbar ul {
@@ -189,7 +187,3 @@ p {
 	padding: 1em;
 
 }
-
-
-
-
